--- a/style.css
+++ b/style.css
@@ -2,13 +2,16 @@
 .logo-img {
     width: 100px;
 }
+.mobil-menu,
 .header-menu,
 .footer-menu {
     list-style: none;
 }
-
+.header-menu ul {
+    align-items: center;
+}
 .header-menu li {
-    padding: 5px 10px;
+    padding: 5px 18px;
 }
 
 .footer-menu li a i {
