--- a/style.css
+++ b/style.css
@@ -13,6 +13,15 @@
 .header-menu li {
     padding: 5px 18px;
 }
+.mobil-menu li {
+    padding: 7px 10px;
+    border-bottom: 1px solid #888888;
+    
+}
+.mobil-menu li a{
+    
+}
+
 
 .footer-menu li a i {
     color: wheat;
